--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 <body>
   <h1>Hello world joy</h1>
   <script>
-    alert("dsgkjdfg")
+    window.onload = function() {
+      alert("dsgkjdfg")
+    }
   </script>
 </body>
 </html>
