--- a/index.html
+++ b/index.html
@@ -23,15 +23,10 @@
   <meta name="msapplication-TileImage" content="./resources/images/favicon/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
   <link rel="stylesheet" href="./resources/css/style.css">
-  <link rel="stylesheet" href="./resources/js/app.js">
+  <script src="./resources/js/app.js"></script>
   <title>JHLab</title>
 </head>
 <body>
   <h1>Hello world joy</h1>
-  <script>
-    window.onload = function() {
-      alert("dsgkjdfg")
-    }
-  </script>
 </body>
 </html>
