--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
   <title>JHLab</title>
 </head>
 <body>
-  <h1>Hello world joy</h1>
+  <div id="wrap">
+    <nav id="gnb">
+      <ul>
+        <li><a href="javascript: alert('준비중입니다')">준비중입니다</a></li>
+        <li><a href="javascript: alert('준비중입니다')">준비중입니다</a></li>
+        <li><a href="">백준 문제 풀이 with python</a></li>
+        <li><a href="javascript: alert('준비중입니다')">준비중입니다</a></li>
+        <li><a href="javascript: alert('준비중입니다')">준비중입니다</a></li>
+      </ul>
+    </nav>
+  </div>
 </body>
 </html>
