--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <ul>
         <li><a href="javascript: alert('준비중입니다')">준비중입니다</a></li>
         <li><a href="javascript: alert('준비중입니다')">준비중입니다</a></li>
-        <li><a href="">백준 문제 풀이 with python</a></li>
+        <li><a href="/pages/solve.html">백준 문제 풀이 with python</a></li>
         <li><a href="javascript: alert('준비중입니다')">준비중입니다</a></li>
         <li><a href="javascript: alert('준비중입니다')">준비중입니다</a></li>
       </ul>
