--- a/index.html
+++ b/index.html
@@ -31,11 +31,26 @@
   <div id="wrap">
     <nav id="gnb">
       <ul>
+        <li><a href="javascript: alert('준비중입니다')">Profile</a></li>
+        <li><a href="javascript: alert('준비중입니다')">Skills</a></li>
+        <li><a href="/pages/interests/overview.html">Interests
+          <ul>
+            <li><a href="/pages/interests/nlp/multilingual.html">MultiLingual AI</a></li>
+            <li><a href="/pages/interests/sr/speechrecognition.html">Speech Recognition</a></li>
+            <li><a href="/pages/interests/mt/machinetranslation.html">Machine Translation</a></li>
+          </ul>
+        </a></li>
+        <li><a href="/pages/algorithm/overview.html">
+          Algorithm
+        </a></li>
         <li><a href="javascript: alert('준비중입니다')">준비중입니다</a></li>
-        <li><a href="javascript: alert('준비중입니다')">준비중입니다</a></li>
-        <li><a href="/pages/solve.html">백준 문제 풀이 with python</a></li>
-        <li><a href="javascript: alert('준비중입니다')">준비중입니다</a></li>
-        <li><a href="javascript: alert('준비중입니다')">준비중입니다</a></li>
+        <li><a href="javascript: alert('준비중입니다')">Bookmarks
+          <ul>
+            <li><a href="https://research.google/" target="_blank">Google Research Blog</a></li>
+            <li><a href="https://www.technologyreview.kr/" target="_blank">MIT Technology Review</a></li>
+            <li><a href="https://machinetranslate.org/">Machine Translate</a></li>
+          </ul>
+        </a></li>
       </ul>
     </nav>
   </div>
