--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <li><a href="/pages/algorithm/overview.html">
           Algorithm
         </a></li>
-        <li><a href="javascript: alert('준비중입니다')">준비중입니다</a></li>
+        <li><a href="/pages/review/overview.html">Reviews</a></li>
         <li><a href="javascript: alert('준비중입니다')">Bookmarks
           <ul>
             <li><a href="https://research.google/" target="_blank">Google Research Blog</a></li>
@@ -54,5 +54,10 @@
       </ul>
     </nav>
   </div>
+  <div class="chick-container">
+    <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100">
+        <path id="chick-icon" d="M50,10 L60,30 L55,55 L45,55 L40,30 Z" fill="yellow" />
+    </svg>
+</div>
 </body>
 </html>
