--- a/index.html
+++ b/index.html
@@ -48,77 +48,77 @@
       </header>
       <section>
         <article class="on">
-          <a href="https://xn--6e0bs5ii3fhrcs2i1lat6zyt5a.kr/" target="_blank"
-            ><video
-              src="src/01_TheSharp.mp4"
-              loop="loop"
-              muted="muted"
-              autoplay="autoplay"
-            ></video
-          ></a>
+          <video
+            src="src/01_TheSharp.mp4"
+            loop="loop"
+            muted="muted"
+            autoplay="autoplay"
+          ></video>
           <div class="slogan">
-            <h2>
-              <div class="inner">The Sharp <br />군산 프리미엘</div>
-            </h2>
+            <a href="https://xn--6e0bs5ii3fhrcs2i1lat6zyt5a.kr/" target="_blank"
+              ><h2>
+                <div class="inner">The Sharp <br />군산 프리미엘</div>
+              </h2></a
+            >
             <div class="p1">
               <div class="inner">군산의 미래를 이끌어갈 단 하나의 이름.</div>
             </div>
           </div>
         </article>
         <article>
-          <a href="https://sdsk.co.kr/main/index.php" target="_blank"
-            ><video
-              src="src/02_Luxe.mp4"
-              loop="loop"
-              muted="muted"
-              autoplay="autoplay"
-            ></video
-          ></a>
+          <video
+            src="src/02_Luxe.mp4"
+            loop="loop"
+            muted="muted"
+            autoplay="autoplay"
+          ></video>
           <div class="slogan">
-            <h2>
-              <div class="inner">
-                송도 Luxe <br />Ocean<br />
-                SK VIEW
-              </div>
-            </h2>
+            <a href="https://sdsk.co.kr/main/index.php" target="_blank"
+              ><h2>
+                <div class="inner">
+                  송도 Luxe <br />Ocean<br />
+                  SK VIEW
+                </div>
+              </h2></a
+            >
             <div class="p1">
               <div class="inner">가장 완벽한 송도의 시간을 살다.</div>
             </div>
           </div>
         </article>
         <article>
-          <a
-            href="https://xn--2n1bt0fhybuzac62aqsdme8ki66a.com/main.php"
-            target="_blank"
-            ><video
-              src="src/03_Desian.mp4"
-              loop="loop"
-              muted="muted"
-              autoplay="autoplay"
-            ></video
-          ></a>
+          <video
+            src="src/03_Desian.mp4"
+            loop="loop"
+            muted="muted"
+            autoplay="autoplay"
+          ></video>
           <div class="slogan">
-            <h2>
-              <div class="inner">아야진 라메르 <br />데시앙</div>
-            </h2>
+            <a
+              href="https://xn--2n1bt0fhybuzac62aqsdme8ki66a.com/main.php"
+              target="_blank"
+              ><h2>
+                <div class="inner">아야진 라메르 <br />데시앙</div>
+              </h2></a
+            >
             <div class="p1">
               <div class="inner">아야진 당신의 바다가 되다.</div>
             </div>
           </div>
         </article>
         <article>
-          <a href="pages/auto_gallery.html" target="_blank"
-            ><video
-              src="src/04_AutoGallery.mp4"
-              loop="loop"
-              muted="muted"
-              autoplay="autoplay"
-            ></video
-          ></a>
+          <video
+            src="src/04_AutoGallery.mp4"
+            loop="loop"
+            muted="muted"
+            autoplay="autoplay"
+          ></video>
           <div class="slogan">
-            <h2>
-              <div class="inner">Auto Sizing <br />Gallery</div>
-            </h2>
+            <a href="pages/auto_gallery.html" target="_blank"
+              ><h2>
+                <div class="inner">Auto Sizing <br />Gallery</div>
+              </h2></a
+            >
             <div class="p1">
               <div class="inner">Gallery that auto layout and size.</div>
             </div>
